fixed item-content overflowing on smartphone bug

--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -24,6 +24,9 @@
 
   &.large {
     height: 380px;
+    @media screen and (max-width: 400px) {
+    	width: 100%;
+    }
   }
 
   .item-background {
